--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     body, html {
       height: 100%;
       font-family: 'Poppins', sans-serif;
-      color: #333;
-      background: rgba(228, 87, 82, 0.397);
+      color: #fafafa;
+      background: rgba(228, 87, 82, 0);
     }
 
     .bg-image {
@@ -100,7 +100,7 @@
       text-align: center;
       font-size: 0.9rem;
       margin-top: 4rem;
-      color: #6d2121;
+      color: #ffffff;
     }
   </style>
 </head>
@@ -137,7 +137,7 @@
       </div>
     </section>
 
-    <section>
+    <section> 
       <h2>Es-tu prêt(e) ?</h2>
       <p>Confirme simplement que tu viens et prépare-toi à lâcher prise. Le lieu ? Tu le sauras à l'embarquement !</p>
     </section>
