--- a/index.html
+++ b/index.html
@@ -149,10 +149,12 @@
       cursor: pointer;
     }
     .galleryid {
-      display: flex;
-      gap: 10px;
-      overflow: hidden;
-      margin: 20px 0;
+ display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  overflow: hidden;
+  margin: 20px 0;
     }
 
     .galleryid img {
